<resources>
    <string name="app_name">Mine TV</string>
    <string name="placeholder">Mine TV Placeholder</string>

    <string name="clear_record">清空记录</string>
    <string name="clear_unstar">清空未收藏</string>
    <string name="clear_view">清空进度记录</string>
    <string name="clear_star">清空收藏</string>

    <string name="action_update">更新</string>
    <string name="action_star">收藏</string>
    <string name="action_unstar">取消收藏</string>
    <string name="action_clear_view">清空进度记录</string>

    <string name="action_reverse">反转</string>

    <string name="text_episode_source">播放源</string>

    <string name="search_results">《%s》搜索结果 %d 个，当前页 %d / %d</string>
    <string name="search_results_none">未搜索到《%s》的结果</string>

    <string name="select_group">播放源 %s </string>

    <string name="tips_del">本 App 资源来自网络公开接口</string>

    <string name="site_info">播放源</string>
    <string name="text_hint_code">编号</string>
    <string name="text_hint_url">地址</string>

    <string name="text_default_text">默认搜索源：%s</string>
    <string name="text_default_text_null">无默认搜索源</string>

    <string name="tv_site_add">添加</string>
    <string name="tv_site_delete">删除</string>

    <string name="back_top">回到顶部</string>
    <string name="next_page">下一页</string>
    <string name="prev_page">上一页</string>


    <string name="player_menu_next">下一集</string>
    <string name="player_menu_prev">上一集</string>
    <string name="player_menu_full">全屏</string>
    <string name="player_menu_origin">原始</string>
    <string name="player_menu_ls">拉伸</string>
    <string name="player_menu_169">16：9</string>
    <string name="player_menu_43">4：3</string>
    <string name="player_menu_direction">快进/快退</string>

    <string-array name="tips">
        <item>按菜单键删除记录或者单集记录</item>
        <item>本 App 不提供任务视频资源，所有资源来自网络公开接口</item>
        <item>视频内的广告，不是本 App 提供，请不要轻易相信</item>
        <item>作者: nianqinianyi</item>
        <item>Github: &#064;minesoft</item>
        <item>@string/app_name</item>
    </string-array>
</resources>