<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_play"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

    <tech.minesoft.minetv.v3app.widget.MinePlayer
            android:id="@+id/video_player"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" >
    </tech.minesoft.minetv.v3app.widget.MinePlayer>

    <LinearLayout
            android:visibility="invisible"
            android:id="@+id/player_menu"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/logo_margin_50"
            android:layout_marginEnd="@dimen/logo_margin_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/player_menu_next"
                android:text="@string/player_menu_next"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Button>

        <Button
                android:id="@+id/player_menu_prev"
                android:text="@string/player_menu_prev"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Button>

<!--        <Button-->
<!--                android:id="@+id/player_menu_full"-->
<!--                android:text="@string/player_menu_full"-->
<!--                android:focusable="false"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"></Button>-->

<!--        <Button-->
<!--                android:id="@+id/player_menu_origin"-->
<!--                android:text="@string/player_menu_origin"-->
<!--                android:focusable="false"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"></Button>-->

<!--        <Button-->
<!--                android:id="@+id/player_menu_ls"-->
<!--                android:text="@string/player_menu_ls"-->
<!--                android:focusable="false"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"></Button>-->

<!--        <Button-->
<!--                android:id="@+id/player_menu_169"-->
<!--                android:text="@string/player_menu_169"-->
<!--                android:focusable="false"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"></Button>-->

<!--        <Button-->
<!--                android:id="@+id/player_menu_43"-->
<!--                android:text="@string/player_menu_43"-->
<!--                android:focusable="false"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"></Button>-->

<!--        <Button-->
<!--                android:id="@+id/player_menu_direction"-->
<!--                android:text="@string/player_menu_direction"-->
<!--                android:focusable="false"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"></Button>-->

    </LinearLayout>

    <ImageView
            android:id="@+id/video_tips_logo"
            android:layout_width="@dimen/logo_size_60"
            android:layout_height="@dimen/logo_size_60"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/logo_margin_50"
            android:layout_marginStart="@dimen/logo_margin_50"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_name" />

    <TextClock
            android:id="@+id/video_tips_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below='@id/video_tips_logo'
            android:layout_marginStart="@dimen/text_margin_65"
            android:format12Hour="HH:mm"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_m"
            android:theme="@style/MyTimePicker" />

    <TextView
            android:id="@+id/video_tips_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below='@id/video_tips_time'
            android:layout_marginStart="@dimen/logo_margin_50"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_s" />

</RelativeLayout>